# thingi10k-bool-test

./: .gitignore  MatrixXE.h  README.md  detect.h  pwn.txt  random-pwn.txt  read_boolean_write.h  read_snap.h  test_all.sh  verify_all.sh
main/: CMakeLists.txt  compare.cpp  main.cpp  resolve.cpp
parallel-cgal/: CMakeLists.txt  main.cpp  snap.cpp
parallel-cgal/cmake/: libigl.cmake
